<resources>
    <string name="app_name">ShoppingList</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="modifica">Modifica</string>
    <string name="elimina">Elimina</string>
    <string name="prodotto">Prodotto</string>
    <string name="conferma">Conferma</string>
    <string name="todo">TODO</string>
    <string name="nome_lista">Nome Lista</string>
    <string name="_2023_nicol_mezzanzanica_tutti_i_diritti_riservati">© 2023 Nicolò Mezzanzanica. Tutti i diritti riservati.</string>
    <string name="instagram_icon">Instagram Icon</string>
    <string name="github_icon">GitHub Icon</string>
    <string name="todoo">TODO</string>
    <string name="crediti">CREDITI</string>
    <string name="questa_app_stata_sviluppata_per_rendere_pi_semplice_la_gestione_della_tua_lista_della_spesa_n_nsperiamo_che_ti_sia_di_aiuto_e_che_tu_possa_apprezzare_le_funzionalit_offerte">Questa app è stata sviluppata per rendere più semplice la gestione della tua lista della spesa.\n\nSperiamo che ti sia di aiuto e che tu possa apprezzare le funzionalità offerte.</string>
    <string name="filtra_per">Filtra per</string>
    <string name="todooo">TODO</string>
    <string name="nome_della_lista">Nome della Lista</string>
    <string name="ritorna_alla_home">Ritorna alla home</string>
    <string name="aggiungi_prodotto">Aggiungi prodotto</string>
    <string name="piu">+</string>
    <string name="tod">TODO</string>
    <string name="l_app_per_una_spesa_pi_smart">l\'app per una spesa più smart</string>
    <string name="categoria">Categoria:</string>
    <string name="quantit">Quantità:</string>
    <string name="prezzo">Prezzo:</string>
    <string name="nome_prodotto">Nome prodotto:</string>
    <string name="indietro">Indietro</string>
    <string name="confermaa">Conferma</string>
    <string name="frutta_e_verdura">Frutta e verdura</string>
    <string name="salumi_e_latticini">Salumi e latticini</string>
    <string name="carne_e_pesce">Carne e pesce</string>
    <string name="pasta_riso_e_legumi">Pasta, riso e legumi</string>
    <string name="pane_e_dolci">Pane e dolci</string>
    <string name="bere">Bere</string>
    <string name="altro">Altro</string>
    <string name="prezzo_facoltativo">Prezzo (facoltativo)</string>
    <string name="nomeprodotto">Nome Prodotto</string>
    <string name="quantitaa">Quantità</string>
    <string name="Altro">Altro</string>
    <string name="Bere">Bere</string>
    <string name="Pane_e_dolci">Pane e Dolci</string>
    <string name="Pasta_riso_e_legumi">Pasta, Riso e Legumi</string>
    <string name="Carne_e_pesce">Carne e Pesce</string>
    <string name="Salumi_e_latticini">Salumi e Latticini</string>
    <string name="Frutta_e_verdura">Frutta e Verdura</string>
    <string name="Mostra_tutti">Mostra tutti</string>
    <string name="Crediti">Crediti</string>
    <string name="ordina_per_nome">Ordina per nome</string>
    <string name="esci">Esci</string>
</resources>